--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </button>
       <a href="/" class="navbar-brand">
-        <img src="{{ '/styles/images/logo.jpg' | prepend: site.baseurl }}">
+        <span style="display:block;width:100px;height:40px;color:white;font-weight: bold;font-size: 28px;line-height: 33px">viewerw</span>
       </a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
